hotfix: fix edit btn path, popup size, js function, add text wrap

--- a/blocks/form/__descrition/form__description.css
+++ b/blocks/form/__descrition/form__description.css
@@ -5,5 +5,5 @@
   line-height: 17px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  margin-top: 57px;
+  margin: 29.74px 36px 0;
 }
