--- a/blocks/form/__submit-button/form__submit-button.css
+++ b/blocks/form/__submit-button/form__submit-button.css
@@ -10,7 +10,7 @@
   line-height: 22px;
   text-align: center;
   align-self: center;
-  margin-top: 81px;
+  margin: 48px 36px 36.51px;
   cursor: pointer;
 }
 
