--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -3,5 +3,5 @@
   font-weight: 900;
   font-style: normal;
   line-height: 29px;
-  margin: 0;
+  margin: 34px 64px 0 36px;
 }
