--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -8,7 +8,6 @@
   width: 430px;
   height: 330px;
   background: #ffffff;
-  padding: 34px 36px 36.5px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
