--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -6,7 +6,7 @@
   border: none;
   align-content: center;
   background-repeat: no-repeat;
-  background-color: #000000;
+  background-color: transparent;
   position: absolute;
   top: -48px;
   right: -40px;
