--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,5 +1,5 @@
 .profile__edit-button{
-  background-image: url('../../../../images/editbutton.png');
+  background-image: url('../../../images/editbutton.png');
   background-color: transparent;
   background-repeat: no-repeat;
   height: 24px;
