--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,5 +1,8 @@
 .profile__name{
   max-width: 380px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   margin: 0;
   padding: 0 24px 16px 0;
   font-size: 42px;
@@ -8,9 +11,13 @@
   color: #ffffff;
 }
 
+.profile__name:hover{
+  overflow: visible;
+}
+
 @media screen and (max-width: 425px) {
   .profile__name{
-    width: 201px;
+    max-width: 201px;
     padding: 0 17.25px 14px 40px;
     font-size: 22px;
     font-style: normal;
